# brij

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/brij/: __init__.py
src/brij/utils/: msg.py
src/brij/utils/cli/: __init__.py
src/brij/utils/client/: base.py
src/brij/utils/server/: base.py
