[project]
name = "brij"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Sattwik Kumar Sahu", email = "sattwik21@iiserb.ac.in" }]
requires-python = ">=3.10"
dependencies = [
    "blosc>=1.11.3",
    "msgpack>=1.1.1",
    "msgpack-numpy>=0.4.8",
    "numpy>=2.2.6",
    "pyzmq>=27.0.1",
    "rich>=14.1.0",
    "typer>=0.16.0",
]

[project.scripts]
brij = "brij:cli_app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8.4.1", "ruff>=0.12.7"]
